# hyper-python-sdk

./: .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: hyper-systems.yml
antora/: antora.yml
antora/modules/ROOT/: nav.adoc
antora/modules/ROOT/pages/: devices.adoc  index.adoc  installing.adoc
examples/: basic_schema_12.py
hyper_systems/: __init__.py
hyper_systems/devices/: __init__.py  device.py  device_schema_gen.py
hyper_systems/http/: __init__.py  client.py  pysimpleurl.py
tests/: hyper_device_schema_12.json  hyper_device_schema_91.json  test_devices.py
