[tool.poetry]
name = "hyper-systems"
version = "1.0.0"
description = "Python SDK for interacting with the Hyper.systems platform."
authors = []
license = "MIT"
readme = "README.md"
packages = [{ include = "hyper_systems" }]
exclude = ["docs"]

[tool.poetry.dependencies]
python = ">=3.7"

[project]
name = "hyper-systems"
version = "1.0.0"
description = "Python SDK for interacting with the Hyper.systems platform."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hyper-systems/hyper-python-sdk"
"Bug Tracker" = "https://github.com/hyper-systems/hyper-python-sdk/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
