[tool.poetry]
name = "hyper-systems"
version = "1.3.0"
description = "Python SDK for interacting with the Hyper.systems platform."
authors = []
license = "MIT"
readme = "README.md"
packages = [{ include = "hyper_systems" }]
homepage = "https://hyper.systems"
documentation = "https://github.com/hyper-systems/hyper-python-sdk"
repository = "https://github.com/hyper-systems/hyper-python-sdk"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hyper-systems/hyper-python-sdk/issues"

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

